@@ -26,3 +26,8 @@ Changes since version 1.0.0
 
 - For posix threads, PTHREAD_MUTEX_RECURSIVE_NP is now only used if
   __linux__ is defined. Otherwise, PTHREAD_MUTEX_RECURSIVE is used.
+
+- The EPROTO error code is now only if it is defined (like under
+  Linux).
+
+- Several other changes that make Ice for C++ more portable.
